@@ -18,6 +18,8 @@
   add "version" and "configversion" RM requests (USC)
   in pbs-config --libs, don't print rpath if libdir is in the sys dlsearch path (USC)
   don't reject job submits if nodes are temporarily down (USC)
+  if MOM can't resolve $pbsserver at startup, try again later (USC)
+    - $pbsclient still suffers this problem
 
 2.1.0p0
 
